--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,3 +2,11 @@
    Import partials below
 */
 @import './helpers/normalize';
+
+@import './helpers/fonts.scss';
+@import './helpers/variables.scss';
+@import './helpers/placeholders.scss';
+@import './helpers/mixin.scss';
+@import './helpers/base.scss';
+
+@import './sections/header.scss';
