fixed some mistakes

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -6,4 +6,7 @@
 @import './helpers/base.scss';
 
 @import './sections/watch-video.scss';
+@import './sections/team.scss';
+@import './sections/feedback.scss';
 @import './sections/footer.scss';
+
