--- a/src/sass/sections/team.scss
+++ b/src/sass/sections/team.scss
@@ -79,6 +79,10 @@ img {
 }
 
 /*   TEAM CARDS   */
+.team__list {
+  width: 270px;
+  margin: 0 auto;
+}
 
 .team-list-image {
   transition: all 0.2s linear;
