--- a/src/sass/sections/feedback.scss
+++ b/src/sass/sections/feedback.scss
@@ -72,9 +72,11 @@
   font-weight: 400;
   text-align: center;
   margin-bottom: 40px;
-  position: relative;
 }
 
+.feedback__list-workposition {
+  position: relative;
+}
 .feedback__list-workposition::before {
   background-image: url("../images/“.png");
   display: block;
@@ -83,6 +85,8 @@
   height: 44px;
   background-repeat: no-repeat;
   position: absolute;
+  top: 0px;
+  left: 0px;
 }
 
 .feedback__list-dots-item:hover .feedback__list-svg {
@@ -144,6 +148,7 @@
     margin-bottom: 60px;
 
   }
+ 
 
   .feedback__list-workposition::before {
     background-image: url("../images/“.png");
@@ -153,8 +158,6 @@
     height: 44px;
     background-repeat: no-repeat;
     position: absolute;
-    top: 1426px;
-    left: 96px;
   }
 
   .feedback__list-description {
@@ -197,7 +200,6 @@
 
   .feedback__list-workposition {
     margin-bottom: 80px;
-
   }
 
   .feedback__list-workposition::before {
@@ -208,8 +210,6 @@
     height: 44px;
     background-repeat: no-repeat;
     position: absolute;
-    top: 1100px;
-    left: 360px;
   }
 
   .feedback__list-description {
