--- a/src/sass/sections/header.scss
+++ b/src/sass/sections/header.scss
@@ -14,8 +14,8 @@
   padding-bottom: 106px;
 
   &__item-text {
-    font-family: 'Open Sans';
-    font-weight: 600;
+    font-family: "OpenSansS";
+    // font-weight: 600;
     font-size: 12px;
     line-height: 36px;
     color: #ffffff;
@@ -81,8 +81,8 @@
 }
 
 .subtitle {
-  font-family: 'Open Sans';
-  font-weight: 600;
+  font-family: "OpenSansS";
+  // font-weight: 600;
   font-size: 18px;
   line-height: 24px;
   color: #ffffff;
