--- a/src/sass/sections/footer.scss
+++ b/src/sass/sections/footer.scss
@@ -1,7 +1,4 @@
-.container {
-  width: 320px;
-  margin: 0 auto;
-}
+
 
 .footer {
   background-color: #000;
@@ -75,6 +72,14 @@ input {
   background-color: #fff;
   margin-bottom: 25px;
   padding: 10px;
+} 
+
+input:valid {
+  outline: solid 3px rgb(0, 128, 0);
+}
+
+input:invalid {
+  outline: solid 3px rgb(255, 0, 0);
 }
 
 textarea {
