path img changed

--- a/src/sass/sections/features.scss
+++ b/src/sass/sections/features.scss
@@ -95,7 +95,7 @@
 }
 
 .features__list--second .features__item:nth-of-type(3)::before {
-  background-image: url("../../images/icon-share.png");
+  background-image: url("../images/icon-share.png");
 }
 
 @media (min-width: 768px) {
