--- a/src/sass/sections/feedback.scss
+++ b/src/sass/sections/feedback.scss
@@ -158,6 +158,8 @@
     height: 44px;
     background-repeat: no-repeat;
     position: absolute;
+    top: 90px;
+  left: 25px;
   }
 
   .feedback__list-description {
@@ -210,6 +212,7 @@
     height: 44px;
     background-repeat: no-repeat;
     position: absolute;
+    left: 130px;
   }
 
   .feedback__list-description {
